refactoring and code cleaning up done, about to start on coreference

--- a/Spacy/TrainingParsing/trainTaggerOnSUC30.ipynb
+++ b/Spacy/TrainingParsing/trainTaggerOnSUC30.ipynb
@@ -10,7 +10,7 @@
    },
    "outputs": [],
    "source": [
-    "from __future__ import unicode_literals\n",
+    "#from __future__ import unicode_literals\n",
     "import xml.etree.ElementTree as ET\n",
     "import spacy\n",
     "import random\n",
